RESOLVED FIXED190316
[Mac] Web Automation: some keyboard interactions don't generate events, causing event simulation to stall
https://bugs.webkit.org/show_bug.cgi?id=190316
Summary [Mac] Web Automation: some keyboard interactions don't generate events, causi...
Blaze Burg
Reported 2018-10-05 11:06:14 PDT
This causes things like ctrl+a for select-all to fail.
Attachments
Patch (16.28 KB, patch)
2018-10-05 15:05 PDT, Blaze Burg
thorton: review+
Blaze Burg
Comment 1 2018-10-05 11:06:30 PDT
Blaze Burg
Comment 2 2018-10-05 15:05:53 PDT
Blaze Burg
Comment 3 2018-10-08 14:02:25 PDT
Note You need to log in before you can comment on or make changes to this bug.